// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assigning a course to someone else through a CourseDetails works, when the course has not been started yet. 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c4 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c1 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c1:hover {
  color: #cc2956;
}

.c3 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c3:hover,
.c3:focus {
  color: #fff;
}

.c3:hover,
.c3:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c3:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  text-align: center;
}

.c2 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      type="button"
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      aria-label={null}
      className="c2 c3"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c4"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </div>,
]
`;

exports[`Assigning a course to someone else through a CourseDetails works, when there are enrollments left. 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c6 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c8 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c8:hover {
  color: #cc2956;
}

.c5 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c5:hover,
.c5:focus {
  color: #fff;
}

.c5:hover,
.c5:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c5:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c3 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c2 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c0 {
  text-align: center;
}

.c7 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c4 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        aria-label="current progress"
        className="c2"
      >
        50
        %
      </span>
      <div
        className="c3"
      />
    </div>
    <a
      aria-label={null}
      className="c4 c5"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c6"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c7"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c8"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c6 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c8 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c8:hover {
  color: #cc2956;
}

.c5 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c5:hover,
.c5:focus {
  color: #fff;
}

.c5:hover,
.c5:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c5:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c3 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c2 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c0 {
  text-align: center;
}

.c7 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c4 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        aria-label="current progress"
        className="c2"
      >
        50
        %
      </span>
      <div
        className="c3"
      />
    </div>
    <a
      aria-label={null}
      className="c4 c5"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c6"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c7"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c8"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that has no unassigned enrollments left, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c6 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c5:hover,
.c5:focus {
  color: #fff;
}

.c5:hover,
.c5:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c5:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c3 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c2 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c0 {
  text-align: center;
}

.c7 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c4 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        aria-label="current progress"
        className="c2"
      >
        50
        %
      </span>
      <div
        className="c3"
      />
    </div>
    <a
      aria-label={null}
      className="c4 c5"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c6"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c7"
    >
      <span>
        5 / 5 assigned.
      </span>
       
      <a
        className={null}
        href="/courses/enrollments"
        onClick={[Function]}
      >
        <span>
          View
        </span>
      </a>
       | 
      <a
        aria-label={null}
        className={null}
        href="http://yoast.test/shop"
        onClick={null}
        rel={null}
        target={null}
      >
        <span>
          Get more
        </span>
      </a>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that has not been bought, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c3 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c5:hover {
  color: #cc2956;
}

.c2 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c2:hover,
.c2:focus {
  color: #fff;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  text-align: center;
}

.c4 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c1 {
  background-color: #a4286a;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <a
      aria-label={null}
      className="c1 c2"
      href="http://yoast.test/shop"
      onClick={null}
      rel={null}
      target="_blank"
    >
      <span>
        Get the full course
      </span>
      <span
        className="screen-reader-text c3"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c4"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that has not been started yet with a single enrollment, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c4 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c1 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c1:hover {
  color: #cc2956;
}

.c3 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c3:hover,
.c3:focus {
  color: #fff;
}

.c3:hover,
.c3:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c3:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  text-align: center;
}

.c2 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <button
      className="c1"
      onClick={[Function]}
      type="button"
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      aria-label={null}
      className="c2 c3"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c4"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that has not been started yet with multiple other enrollment, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c3 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c5:hover {
  color: #cc2956;
}

.c2 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c2:hover,
.c2:focus {
  color: #fff;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  text-align: center;
}

.c4 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c1 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <a
      aria-label={null}
      className="c1 c2"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c3"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c4"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that is completed, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c7 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c9 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c9:hover {
  color: #cc2956;
}

.c6 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c6:hover,
.c6:focus {
  color: #fff;
}

.c6:hover,
.c6:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  color: #000;
  background-color: #fff;
  border: 1px solid #000;
  min-width: 152px;
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
  text-shadow: none;
}

.c5:hover,
.c5:focus {
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border: 0;
  text-shadow: 0px 0px 2px #000;
}

.c1 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c3 {
  width: 100%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c2 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #fff;
}

.c0 {
  text-align: center;
}

.c8 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c4 {
  margin-top: 24px;
  width: 100%;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        aria-label="current progress"
        className="c2"
      >
        100
        %
      </span>
      <div
        className="c3"
      />
    </div>
    <a
      aria-label={null}
      className="c4 c5 c6"
      href="http://yoast.academy.test/certificate"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        View your certificate
      </span>
      <span
        className="screen-reader-text c7"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c8"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c9"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that is free, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c6 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c8 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c8:hover {
  color: #cc2956;
}

.c5 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c5:hover,
.c5:focus {
  color: #fff;
}

.c5:hover,
.c5:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c5:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c3 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c2 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c0 {
  text-align: center;
}

.c7 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c4 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        aria-label="current progress"
        className="c2"
      >
        50
        %
      </span>
      <div
        className="c3"
      />
    </div>
    <a
      aria-label={null}
      className="c4 c5"
      href="http://yoast.academy.test/awesome_seo"
      onClick={null}
      rel="noopener"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c6"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c7"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c8"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;

exports[`The CourseDetails component, for a course that is on sale, matches the snapshot 1`] = `
Array [
  .c0 {
  margin-bottom: 24px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <p>
      This is an awesome, sexy SEO course.
    </p>
  </div>,
  .c3 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c5:hover {
  color: #cc2956;
}

.c2 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c2:hover,
.c2:focus {
  color: #fff;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  text-align: center;
}

.c4 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c1 {
  background-color: #ffeb3b;
  color: #000;
  width: 100%;
  text-shadow: none;
}

<div
    className="c0"
  >
    <a
      aria-label={null}
      className="c1 c2"
      href="http://yoast.test/shop"
      onClick={null}
      rel={null}
      target="_blank"
    >
      <span>
        Get the full course
      </span>
      <span
        className="screen-reader-text c3"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c4"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>,
]
`;
